# pptx2html_json

./: .env  .gitignore  GEMINI.md  README.md  TASKS.md  bullet_point_rendering_design.md  commit_message.txt  diff.txt  main.py  package-lock.json  package.json  pyproject.toml  v0.2.7_html_writer.py  v0.2.8_html_writer.py
.gemini/: GEMINI.md  html5point_reverse_engineering_report.md  report.md  settings.json
docs/: inheritance_model.md  schema_notes.md
docs/Office Open XML - DrawingML - Shapes - Text - Alignment, Tabs, Other_files/: Office Open XML - DrawingML - Shapes - Text - Alignment, Tabs, Other.html
docs/ooxml_docs_v2/: TOC.md
example/: extract.py  ~$Galaxy presentation.pptx
output_presentation_test/: presentation.json
tasks/: create_base_folders.md  create_python_classes_dataclasses.md  cross_reference_with_ecma_pdf.md  define_parse_pptx_entrypoint.md  extract_images_and_links.md  extract_placeholder_information.md  improve_html_layout.md  inspect_pptx_structure.md  iterate_over_all_slides.md  json_writer_module.md  map_xml_to_slide_elements.md  parse_presentation_order.md  parse_shape_tree.md  parse_slide_xml.md  refine_slide_element_parsing.md  validate_media_extraction.md  validate_uv_add_install.md  write_html_output.md  write_readme_and_usage_example.md
temp_pptx/: [Content_Types].xml
temp_respiratory/: [Content_Types].xml
tests/: dummy_group_shape.xml  test_absolute_positioning.py  test_background_extraction.py  test_background_html_integration.py  test_background_image_generation.py  test_background_theme_colors.py  test_bullet_list_detection.py  test_coordinate_conversion.py  test_element_classification.py  test_flexbox_layout.py  test_galaxy_theme_integration.py  test_html_writer.py  test_json_schema.py  test_json_schema_compliance.py  test_json_writer.py  test_json_writer_css_output.py  test_layout.py  test_layout_detection.py  test_models.py  test_overflow_detection.py  test_overflow_prevention.py  test_pptx_parser.py  test_presentation_parser.py  test_slide_parser.py  test_slide_parser_base.py  test_slide_parser_shapes.py  test_slide_parser_text.py  test_text_semantics.py  test_theme_resolver.py
version7_output_presentation/: presentation.json
(+677 files in other folders)
