[project]
name = "learnx-parser"
version = "0.2.6"
description = "A Python package to parse .pptx files and convert them to HTML or JSON."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yatin Kare", email = "yatin.kare@gmail.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]

dependencies = [
    "lxml",
    "pytest>=8.4.1",
    "jsonschema",
    "htpy>=25.7.0",
]

[project.urls]
Homepage = "https://github.com/yatink/pptx2html_json"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
